<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_login"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme.NoActionBar"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivePayLoginActivity"
    android:touchscreenBlocksFocus="false"
    android:weightSum="1">
        <LinearLayout
            android:id="@+id/layout_login_form"
            android:layout_width="285dp"
            android:layout_height="230dp"
            android:orientation="vertical"
            android:weightSum="1">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


    <AutoCompleteTextView
        android:id="@+id/txtvw_email"
        android:layout_width="283dp"
        android:layout_height="30dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/unselected_rounded_corner"
        android:linksClickable="true"
        android:longClickable="true" />

    <EditText
        android:id="@+id/txtvw_password"
        android:layout_marginTop = "2dp"
        android:layout_width="283dp"
        android:layout_height="30dp"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:background="@drawable/unselected_rounded_corner"
        android:linksClickable="true"
        android:longClickable="true" />


    <Button
        android:id="@+id/btn_email_sign_in"
        style="?android:textAppearanceSmall"
        android:layout_width="283dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="#e96707"
        android:layout_gravity="center_horizontal" />
    


    <Button
        android:id="@+id/btn_sever_settings"
        android:layout_width="283dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/server_settings"
        android:textAllCaps="false"/>

</LinearLayout>
