<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/route_nav_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="#00000000"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:layout_marginRight="5dp"
        android:src="@drawable/icon_route" />

    <TextView
        android:id="@+id/route_nav_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_toRightOf="@id/route_nav_button"
        android:layout_centerVertical="true"
        android:text="@string/route_nav"
        android:textStyle="bold"
        android:layout_marginRight="15dp"
        android:textColor="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/approve_nav_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/route_nav_button"
        android:text="@string/approve_nav"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginRight="15dp"
        android:textSize="14sp" />

    <ImageButton
        android:id="@+id/approve_nav_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_toLeftOf="@id/approve_nav_title"
        android:adjustViewBounds="true"
        android:background="#00000000"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:layout_marginRight="5dp"
        android:src="@drawable/icon_approve" />

    <ImageButton
        android:id="@+id/reject_nav_button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:background="#00000000"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:layout_marginRight="5dp"
        android:layout_toRightOf="@id/route_nav_title"
        android:src="@drawable/icon_reject" />

    <TextView
        android:id="@+id/reject_nav_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/reject_nav_button"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:text="@string/reject_nav"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="14sp" />


</RelativeLayout>
