<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:gravity="center"
    android:orientation="horizontal">



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">



        <ImageButton
            android:id="@+id/header_nav_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:adjustViewBounds="true"
            android:background="#00000000"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:src="@drawable/header_icon"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/header_nav_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#989DA1"
            android:textSize="12sp"
            android:text="@string/header_nav"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/line_details_nav_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:adjustViewBounds="true"
            android:background="#00000000"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:src="@drawable/line_items_icon"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/lines_nav_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#989DA1"
            android:textSize="12sp"
            android:text="@string/lines_nav"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/image_nav_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:adjustViewBounds="true"
            android:background="#00000000"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:src="@drawable/picture_icon"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/image_nav_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#989DA1"
            android:textSize="12sp"
            android:text="@string/image_nav"
            android:layout_gravity="center"/>

    </LinearLayout>
</LinearLayout>
